# KBTU-python-2-final

./: .gitignore  Nurzhan's_README.md  Nurzhan's_example.ipynb  README.md  dasha's_README.md  example2.py  examples.ipynb  ilya_README.md  main.py  pyproject.toml  setup.py  tasks.md
diffeq/: SDE.py  __init__.py  example.py
diffeq/plotting/: __init__.py  drawing_utils.py  interactive.py  visualization_tasks.py
diffeq/utils/: __init__.py  calculus.py  string_operations.py  symbolic.py  vectors.py
examples/: advanced_vector_functions.py  main.py  numerical_jacobian.py  strange_attractors_visualization.py  symbolic_operations.py  vector_functions.py  vector_operations.py
examples/backup/ignore_this_or_delete/: dasha's_README.md  ilya_README.md
output/: Lu Chen.html  lorenz.html  rossler.html
tests/: test_numerical_methods.py
