[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffeq-lib"
version = "0.1.0"
authors = [
    {name = "KBTU Python II Team", email = "team@example.com"}
]
description = "Python library for differential equations solving and visualization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
"Homepage" = "https://github.com/Squmon/KBTU-python-2-final"
"Repository" = "https://github.com/Squmon/KBTU-python-2-final.git"